--- a/Ally.html
+++ b/Ally.html
@@ -1,1 +1,24 @@
-<hi>hi<hi>
+
+<!DOCKTYPE html>
+<html>
+<head>
+<body>
+<script>
+var a;
+
+prompt(„ally is cool yes or no“);
+
+switch(a){
+case „no“;
+a = „fuck you wrong answer“;
+break;
+case „yes“;
+a = „yay! Correct answer“;
+break;
+};
+
+alert(a); 
+<script>
+<body>
+<head>
+<html>
