--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <script>
 var a;
 
-prompt(„ally is cool yes or no“);
+var text prompt(„ally is cool yes or no“);
 
-switch(a){
+switch(text){
 case „no“;
 a = „fuck you wrong answer“;
 break;
