--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script>
 var a;
 
-var text prompt(„ally is cool yes or no“);
+var text = prompt(„ally is cool yes or no“);
 
 switch(text){
 case „no“;
