--- a/index.html
+++ b/index.html
@@ -6,19 +6,9 @@
 <script>
 var a;
 
-var text = prompt(„ally is cool yes or no“);
+ prompt(„ally is cool yes or no“);
 
-switch(text){
-case „no“;
-a = „fuck you wrong answer“;
-break;
-case „yes“;
-a = „yay! Correct answer“;
-break;
-};
-    
-
-alert(a); 
+  
 <script>
 <body>
 <head>
